@@ -1,5 +1,6 @@
 ! { dg-do run }
+! { dg-options "-ffixed-form" }
       PROGRAM A3
 !234567890
-!$    PRINT *, "Compiled by an OpenM-compliant implementation."
+!$    PRINT *, "Compiled by an OpenMP-compliant implementation."
       END PROGRAM A3
