@@ -1,3 +1,12 @@
+2005-10-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.fortran/appendix-a/a.40.1.f90: Add -ffixed-form to
+	dg-options.
+	* testsuite/libgomp.fortran/appendix-a/a.18.1.f90: Likewise.  Enable
+	flush loop now that __sync_synchronize has proper memory barrier.
+	* testsuite/libgomp.fortran/appendix-a/a.3.1.f90: Fix a typo.
+	Add -ffixed-form to dg-options.
+
 2005-10-17  Diego Novillo  <dnovillo@redhat.com>
 
 	* testsuite/libgomp.fortran/fortran.exp: Also gather tests
